# translate

./: biome.json  bun.lockb  package.json
marian/: .lintstagedrc.json  Cargo.toml
marian/src/: lib.rs  marian.rs  opus_mt.rs  utils.rs
web/: .lintstagedrc.json  package.json
web/src/: App.tsx  main.tsx  session.worker.ts
web/src/components/providers/: init-wasm.tsx
web/src/constants/: hf.ts
web/src/helpers/: session.ts
web/src/utils/: fetch-with-progress.ts
