[package]
name = "marian"
version = "0.1.0"
authors = ["yu7400ki <yu7400ki@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.89"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

anyhow = "1.0.75"
candle = { git = "https://github.com/huggingface/candle.git", version = "0.3.1", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
tokenizers = { version = "0.15.0", default-features = false, features = ["unstable_wasm"] }
getrandom = { version = "0.2.11", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
